// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Events/Add-v2/lib/sections/RelatedProducts/index render default 1`] = `
<div
  className="makeStyles-root-1"
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Related Products"
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    direction="column"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={6}
      xs={12}
    >
      <div>
        <Typography
          className=""
          color="general-main"
          inline={false}
          variant="h4"
          weight="medium"
        >
          Produk Terkait
        </Typography>
      </div>
      <Styled(MuiBox)
        className="makeStyles-selectBox-6"
        mt={3}
      >
        <div
          className="makeStyles-selectContainer-7"
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={8}
            >
              <Select
                control={Object {}}
                error={false}
                helperText=""
                isDisabled={true}
                isLoading={false}
                label=""
                name="selectedProduct"
                options={Array []}
                placeholder="Pilih product terkait"
                required={false}
                shouldUnregister={false}
                staticWidth="100%"
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <Button
                disabled={true}
                leftIcon={null}
                loading={false}
                ml={0}
                mr={0}
                onClick={[MockFunction]}
                rightIcon={null}
                rounded="normal"
                textTransform="uppercase"
                variant="filled"
              >
                add product
              </Button>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
          <Typography
            className=""
            color="primary-main"
            inline={false}
            variant="caption"
            weight="normal"
          >
            error
          </Typography>
        </div>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <div
            className="makeStyles-itemContainer-2"
          >
            <Typography
              className="makeStyles-itemsLabel-3"
              color="general-main"
              inline={false}
              variant="h5"
              weight="medium"
            >
              test
            </Typography>
            <Memo
              className="makeStyles-deleteIcon-4"
              onClick={[Function]}
            />
          </div>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <div
            className="makeStyles-itemContainer-2"
          >
            <Typography
              className="makeStyles-itemsLabel-3"
              color="general-main"
              inline={false}
              variant="h5"
              weight="medium"
            >
              test 2
            </Typography>
            <Memo
              className="makeStyles-deleteIcon-4"
              onClick={[Function]}
            />
          </div>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div
    className="makeStyles-disabledSection-5"
  />
</div>
`;

exports[`src/containers/ContentManagement/Events/Add-v2/lib/sections/RelatedProducts/index render isDisplayRelatedProduct false 1`] = `
<div
  className="makeStyles-root-9"
>
  <SectionMark
    description=""
    isDisplay={true}
    nonmandatory={true}
    onChange={[Function]}
    title="Related Products"
  />
  <WithStyles(ForwardRef(Grid))
    container={true}
    direction="column"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      sm={6}
      xs={12}
    >
      <div>
        <Typography
          className=""
          color="general-main"
          inline={false}
          variant="h4"
          weight="medium"
        >
          Produk Terkait
        </Typography>
      </div>
      <Styled(MuiBox)
        className="makeStyles-selectBox-14"
        mt={3}
      >
        <div
          className="makeStyles-selectContainer-15"
        >
          <WithStyles(ForwardRef(Grid))
            container={true}
            spacing={2}
          >
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={8}
            >
              <Select
                control={Object {}}
                error={false}
                helperText=""
                isDisabled={false}
                isLoading={false}
                label=""
                name="selectedProduct"
                options={Array []}
                placeholder="Pilih product terkait"
                required={false}
                shouldUnregister={false}
                staticWidth="100%"
              />
            </WithStyles(ForwardRef(Grid))>
            <WithStyles(ForwardRef(Grid))
              item={true}
              xs={4}
            >
              <Button
                disabled={true}
                leftIcon={null}
                loading={false}
                ml={0}
                mr={0}
                onClick={[MockFunction]}
                rightIcon={null}
                rounded="normal"
                textTransform="uppercase"
                variant="filled"
              >
                add product
              </Button>
            </WithStyles(ForwardRef(Grid))>
          </WithStyles(ForwardRef(Grid))>
          <Typography
            className=""
            color="primary-main"
            inline={false}
            variant="caption"
            weight="normal"
          >
            error
          </Typography>
        </div>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        spacing={2}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <div
            className="makeStyles-itemContainer-10"
          >
            <Typography
              className="makeStyles-itemsLabel-11"
              color="general-main"
              inline={false}
              variant="h5"
              weight="medium"
            >
              test
            </Typography>
            <Memo
              className="makeStyles-deleteIcon-12"
              onClick={[Function]}
            />
          </div>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <div
            className="makeStyles-itemContainer-10"
          >
            <Typography
              className="makeStyles-itemsLabel-11"
              color="general-main"
              inline={false}
              variant="h5"
              weight="medium"
            >
              test 2
            </Typography>
            <Memo
              className="makeStyles-deleteIcon-12"
              onClick={[Function]}
            />
          </div>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <div
    className={false}
  />
</div>
`;
